docker-kompose-manifests/docker-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: docker-frontend
  name: docker-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: docker-frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/defaultnetwork: "true"
        io.kompose.service: docker-frontend
    spec:
      containers:
      - env:
        - name: REACT_APP_API_URL
          value: http://localhost:4000/api
        image: laurihakala/tori-frontend
        imagePullPolicy: ""
        name: docker-frontend
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
